--- a/src/Components/category/category.css
+++ b/src/Components/category/category.css
@@ -86,14 +86,14 @@
 @media screen and (max-width: 550px) {
   .category__card {
     grid-template-columns: repeat(3, 120px);
-    margin-left: auto;
-    margin-right: auto;
+    column-gap: 1rem !important;
     justify-content: center;
     align-items: center;
   }
 
   .category__card-item {
     height: 8rem;
+    margin-left: 10px;
   }
 }
 
