--- a/src/Components/category/category.css
+++ b/src/Components/category/category.css
@@ -1,3 +1,7 @@
+.feature {
+  margin-bottom: -5rem;
+}
+
 .category__menu {
   display: flex;
   justify-content: space-between;
@@ -59,6 +63,29 @@
 
 .category__menu:hover .category__menu-icon {
   border: 5px solid #fff;
+}
+
+.feature__button {
+  /* border: 2px solid black; */
+  justify-self: center;
+}
+
+.feature__button {
+  width: 100%;
+  text-align: center;
+}
+
+.feature__button-item {
+  padding: 1rem 2rem;
+  margin-top: var(--mb-3);
+  background-color: var(--text-purple);
+  border-radius: 0.5rem;
+  color: var(--container-color);
+  display: none;
+}
+
+.feature__button-active {
+  display: inline-block;
 }
 
 /* ===================Breakpoint======================= */
